# hello32

./: Cargo.toml  pyproject.toml  requirements.txt
auth-service/: Cargo.toml
packages100/: requirements.txt
services/: setup.py
